--- a/pages/encuesta.html
+++ b/pages/encuesta.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Encuesta Cliente</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@3.4.1/dist/tailwind.min.css" rel="stylesheet">
+  <link href="../css/encuesta.css" rel="stylesheet">
 </head>
 <body class="bg-gray-100 flex items-center justify-center min-h-screen">
   <div class="bg-white shadow-xl rounded-xl p-8 w-full max-w-lg relative">
@@ -47,45 +48,6 @@
       <button class="mt-4 bg-blue-600 text-white px-4 py-2 rounded" onclick="cerrarModal()">Cerrar</button>
     </div>
   </div>
-  <script>
-    document.getElementById('puntaje').addEventListener('input', e => {
-      document.getElementById('sliderValue').textContent = e.target.value;
-    });
-    document.getElementById('encuestaForm').addEventListener('submit', async function(e) {
-      e.preventDefault();
-      let valid = true;
-      const email = document.getElementById('email').value.trim();
-      const emailError = document.getElementById('emailError');
-      emailError.classList.add('hidden');
-      if (!/^[^\s@]+@[^\s@]+\.[^\s@]+$/.test(email)) {
-        emailError.classList.remove('hidden');
-        valid = false;
-      }
-      const opinion = document.getElementById('opinion').value.trim();
-      const opinionError = document.getElementById('opinionError');
-      opinionError.classList.add('hidden');
-      if (!opinion) {
-        opinionError.classList.remove('hidden');
-        valid = false;
-      }
-      const fileInput = document.getElementById('imagen');
-      const imagenError = document.getElementById('imagenError');
-      imagenError.classList.add('hidden');
-      const file = fileInput.files[0];
-      if (file && (!file.type.startswith('image/') || file.size > 2*1024*1024)) {
-        imagenError.classList.remove('hidden');
-        valid = false;
-      }
-      if (!valid) return;
-      document.getElementById('modalGracias').classList.remove('hidden');
-    });
-    document.getElementById('omitir').onclick = () => {
-      window.location.href = "home.html";
-    };
-    function cerrarModal() {
-      document.getElementById('modalGracias').classList.add('hidden');
-      window.location.href = "home.html";
-    }
-  </script>
+  <script src="../js/encuesta.js"></script>
 </body>
 </html>
