--- a/pages/index.html
+++ b/pages/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TCG Shop - Tienda</title>
     <link rel="stylesheet" href="../css/tienda.css" />
+    <script src="https://cdn.socket.io/4.7.5/socket.io.min.js"></script>
   </head>
   <body>
     <header>
