--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -1,12 +1,35 @@
-<body>
-  <header>
-    <button onclick="window.location.href='index.html'">
-      Volver a la tienda
-    </button>
-  </header>
-  <h1>Carrito de Compras</h1>
-  <div id="carrito-lista"></div>
-  <div id="carrito-total"></div>
-  <button id="finalizar-btn">Finalizar compra</button>
-  <script src="../js/carrito.js"></script>
-</body>
+<!DOCTYPE html>
+<html lang="es">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Carrito de Compras | Pokémon Business</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Favicon Pokémon -->
+    <link rel="icon" type="image/png" href="../assets/pokebola.png" />
+    <!-- Bootstrap 5 CDN -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <!-- Tailwind CDN -->
+    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- CSS Pokémon Carrito -->
+    <link rel="stylesheet" href="../css/carrito.css" />
+  </head>
+  <body>
+    <header>
+      <div class="header-carrito">
+        <button onclick="window.location.href='index.html'">
+          Volver a la tienda
+        </button>
+      </div>
+    </header>
+    <div class="main-carrito-container">
+      <h1>Carrito de Compras</h1>
+      <div id="carrito-lista"></div>
+      <div id="carrito-total"></div>
+      <button id="finalizar-btn">Finalizar compra</button>
+    </div>
+    <script src="../js/carrito.js"></script>
+  </body>
+</html>
