--- a/pages/login.html
+++ b/pages/login.html
@@ -2,24 +2,38 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <title>Login Cliente</title>
-    <link rel="stylesheet" href="../css/tienda.css" />
+    <title>Login | Pokémon Business</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/png" href="../assets/pokebola.png" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="../css/login.css" />
   </head>
   <body>
-    <div class="login-container">
-      <h2>Ingresar</h2>
+    <div class="login-bg-pokeball"></div>
+    <div class="login-main-card">
+      <img src="../assets/pokebola.png" alt="Pokebola" class="login-pokebola" />
+      <h2>Ingresar <span class="login-title-poke">Pokémon Business</span></h2>
       <form id="login-form">
-        <div>
+        <div class="mb-3">
           <label for="email">Correo:</label>
-          <input type="email" id="email" required />
+          <input type="email" id="email" required autocomplete="username" />
         </div>
-        <div>
+        <div class="mb-3">
           <label for="password">Contraseña:</label>
-          <input type="password" id="password" required />
+          <input
+            type="password"
+            id="password"
+            required
+            autocomplete="current-password"
+          />
         </div>
-        <button type="submit">Ingresar</button>
+        <button type="submit" class="login-btn">Ingresar</button>
       </form>
-      <div id="login-error" style="color: red; margin-top: 10px"></div>
+      <div id="login-error" class="login-error"></div>
     </div>
     <script src="../js/login.js"></script>
   </body>
