--- a/pages/detalle.html
+++ b/pages/detalle.html
@@ -4,15 +4,85 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Detalle Producto</title>
+    <!-- Favicon Pokémon -->
+    <link rel="icon" type="image/png" href="../assets/pokebola.png" />
+    <!-- Bootstrap 5 CDN (opcional si usás clases de Bootstrap) -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <!-- Tailwind (si usás clases de Tailwind en el contenido) -->
     <link
       href="https://cdn.jsdelivr.net/npm/tailwindcss@3.4.1/dist/tailwind.min.css"
       rel="stylesheet"
     />
+    <!-- CSS de la tienda para estilos de header y globales -->
+    <link href="../css/tienda.css" rel="stylesheet" />
     <link href="../css/detalle.css" rel="stylesheet" />
   </head>
-  <body class="bg-gray-100 flex items-center justify-center min-h-screen">
+  <body class="bg-gray-100 min-h-screen">
+    <header class="bg-dark py-3 mb-4">
+      <div class="container d-flex align-items-center justify-content-between">
+        <!-- Logo Izquierda -->
+        <img
+          src="../images/empresa_logo.png"
+          alt="Logo Izq"
+          class="logo-header"
+        />
+
+        <!-- Título -->
+        <div class="flex-grow-1 text-center">
+          <h1 class="display-5 fw-bold mb-0 text-white">TCG Shop</h1>
+        </div>
+
+        <!-- Logo Derecha -->
+        <img
+          src="../images/empresa_logo2.jpg"
+          alt="Logo Der"
+          class="logo-header d-none d-md-block"
+        />
+
+        <!-- Navbar de páginas (sin login) -->
+        <nav class="ms-4">
+          <ul class="nav">
+            <li class="nav-item">
+              <a class="nav-link text-white" href="index.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-white" href="detalle.html">Detalle</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-white" href="encuesta.html">Encuesta</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-white" href="admin-registros.html"
+                >Admin</a
+              >
+            </li>
+          </ul>
+        </nav>
+
+        <!-- Carrito arriba a la derecha -->
+        <div class="ms-3 carrito-derecha">
+          <button
+            onclick="window.location.href='carrito.html'"
+            id="carrito-btn"
+            class="btn btn-lg btn-warning position-relative fw-semibold"
+          >
+            🛒 Carrito
+            <span
+              id="carrito-cantidad"
+              class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger"
+            >
+              0
+            </span>
+          </button>
+        </div>
+      </div>
+    </header>
+
     <div
-      id="productos-lista"
+      id="detalle-card"
       class="bg-white shadow-xl rounded-xl p-8 w-full max-w-lg"
     >
       <div class="text-center text-gray-600">Cargando...</div>
