--- a/pages/index.html
+++ b/pages/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TCG Shop - Tienda</title>
+    <link rel="icon" type="image/png" href="../assets/pokebola.png" />
     <!-- Bootstrap 5 CDN -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -52,6 +53,21 @@
           </button>
         </div>
       </div>
+
+      <!-- Navbar de páginas (sin login) -->
+      <nav class="ms-4">
+        <ul class="nav">
+          <li class="nav-item">
+            <a class="nav-link text-white" href="index.html">Inicio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-white" href="encuesta.html">Encuesta</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-white" href="admin-registros.html">Admin</a>
+          </li>
+        </ul>
+      </nav>
     </header>
 
     <main class="flex-grow-1">
